PLT-6545 - Fix for Code block tag on mobile

--- a/webapp/sass/responsive/_mobile.scss
+++ b/webapp/sass/responsive/_mobile.scss
@@ -181,6 +181,7 @@
         @include opacity(.6);
         @include transition(none);
         display: block;
+        position: relative;
     }
 
     .post-code {
